--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">1:48:20 <small>AM</small></div>
+      </div>
+      <div class="city">
+        <h2>Paris</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">1:48:20 <small>AM</small></div>
+      </div>
+    </div>
   </body>
   <footer>
     This project was coded with 🤍 by Praise Maposa
-    <a href="https://github.com/praie" target="_blank"
+    <a href="https://github.com/praie/World-clock" target="_blank"
       >and is open sourced on GitHub
     </a>
   </footer>
