--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>World Clock</title>
   </head>
   <body>
@@ -15,19 +16,23 @@
         <option value="">Auckland</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2024</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
         <div class="time">1:48:20 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Paris</h2>
-        <div class="date">August 15th 2024</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
         <div class="time">1:48:20 <small>AM</small></div>
       </div>
     </div>
   </body>
   <footer>
-    This project was coded with 🤍 by Praise Maposa
+    This project was coded with 🩶 by Praise Maposa
     <a href="https://github.com/praie/World-clock" target="_blank"
       >and is open sourced on GitHub
     </a>
