--- a/index.html
+++ b/index.html
@@ -12,32 +12,35 @@
     <div class="container">
       <h1>World Clock</h1>
       <select id="city">
-        <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="">Select a city ...</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific">Auckland</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date">June 9, 2024</div>
+          </div>
+          <div class="time">03:17:19 <small>PM</small></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris</h2>
-          <div class="date"></div>
+        <div class="city" id="paris">
+          <div>
+            <h2>Paris</h2>
+            <div class="date">June 9, 2024</div>
+          </div>
+          <div class="time">12:40:12 <small>AM</small></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
+    <footer>
+      This project was coded with 🩶 by Praise Maposa
+      <a href="https://github.com/praie/World-clock" target="_blank"
+        >and is open sourced on GitHub
+      </a>
+    </footer>
+    <script src="src/index.js"></script>
   </body>
-  <footer>
-    This project was coded with 🩶 by Praise Maposa
-    <a href="https://github.com/praie/World-clock" target="_blank"
-      >and is open sourced on GitHub
-    </a>
-  </footer>
-  <script src="src/index.js"></script>
 </html>
