--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
-        <option value="Pacific">Auckland</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
 
       <div id="cities">
