--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>🌍World Clock</h1>
       <select id="city">
         <option value="">Select a city ...</option>
         <option value="current">My current location</option>
@@ -37,7 +37,7 @@
       </div>
     </div>
     <footer>
-      This project was coded with 🩶 by Praise Maposa
+      This project was coded with 🩶 by <strong>Praise Maposa</strong>
       <a href="https://github.com/praie/World-clock" target="_blank"
         >and is open sourced on GitHub
       </a>
